--- a/.config/hydra-postgresql.yml
+++ b/.config/hydra-postgresql.yml
@@ -27,7 +27,7 @@ oidc:
       salt: 432fdewf23r234234
 
 
-  #ttl:
+  ttl:
   # Configures how long access tokens are valid.
   #access_token: 1h
   # Configures how long refresh tokens are valid. Set to -1 for refresh tokens to never expire.
@@ -37,5 +37,5 @@ oidc:
   # Configures how long auth codes are valid.
   #auth_code: 1h
   # Configures how long a user login and consent flow may take.
-  #login_consent_request: 1h
+    login_consent_request: 10s
 
