--- a/.config/hydra-postgresql.yml
+++ b/.config/hydra-postgresql.yml
@@ -29,13 +29,13 @@ oidc:
 
 ttl:
   # Configures how long access tokens are valid.
-  access_token: 10s
+  access_token: 5m
   # Configures how long refresh tokens are valid. Set to -1 for refresh tokens to never expire.
-  refresh_token: 10s
+  refresh_token: 5m
   # Configures how long id tokens are valid.
   # id_token: 1h
   # Configures how long auth codes are valid.
-  auth_code: 10s
+  auth_code: 5m
   # Configures how long a user login and consent flow may take.
-  login_consent_request: 10s
+  login_consent_request: 5m
 
