--- a/.config/hydra-mysql.yml
+++ b/.config/hydra-mysql.yml
@@ -32,7 +32,7 @@ ttl:
   # Configures how long refresh tokens are valid. Set to -1 for refresh tokens to never expire.
   refresh_token: 59s
   # Configures how long id tokens are valid.
-  # id_token: 1h
+  id_token: 59s
   # Configures how long auth codes are valid.
   auth_code: 59s
   # Configures how long a user login and consent flow may take.
