--- a/.config/hydra-postgresql.yml
+++ b/.config/hydra-postgresql.yml
@@ -33,7 +33,7 @@ ttl:
   # Configures how long refresh tokens are valid. Set to -1 for refresh tokens to never expire.
   refresh_token: 5m
   # Configures how long id tokens are valid.
-  # id_token: 1h
+  id_token: 5m
   # Configures how long auth codes are valid.
   auth_code: 5m
   # Configures how long a user login and consent flow may take.
