--- a/.config/hydra-mysql.yml
+++ b/.config/hydra-mysql.yml
@@ -28,12 +28,12 @@ oidc:
 
 ttl:
   # Configures how long access tokens are valid.
-  access_token: 59s
+  access_token: 10m
   # Configures how long refresh tokens are valid. Set to -1 for refresh tokens to never expire.
-  refresh_token: 59s
+  refresh_token: 10m
   # Configures how long id tokens are valid.
-  id_token: 59s
+  id_token: 10m
   # Configures how long auth codes are valid.
-  auth_code: 59s
+  auth_code: 10m
   # Configures how long a user login and consent flow may take.
-  login_consent_request: 59s
+  login_consent_request: 30s
